main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "teste" {
  ami = "ami-066784287e358dad1"
  instance_type = "t2.micro"

  tags = {
    Name = "teste"
  }
}
