security-group-tfg.tf
  variable "porta_http" {
  description = "porta http"
  default = 80
  type = number
}

variable "porta_https" {
  description = "porta https"
  default = 443
  type = number
}

resource "aws_security_group" "sg_pub_tech_for_good" {
  name = "sg_pub_tech_for_good"
  vpc_id = aws_vpc.vpc_tech_for_good.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = var.porta_http
    to_port     = var.porta_http
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = var.porta_http
    to_port     = var.porta_http
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = var.porta_https
    to_port     = var.porta_https
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = var.porta_https
    to_port     = var.porta_https
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_pri_tech_for_good" {
  name   = "sg_pri_tech_for_good"
  vpc_id = aws_vpc.vpc_tech_for_good.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
